# gradz-server

./: .dockerignore  README.md  main.py  pyproject.toml  requirements.txt
api/: endpoints.py
data/indexes/telc-deutsche-a2-b1/: default__vector_store.json  docstore.json  index_store.json  prompts.py
gradz-server/: main.py
services/: document_loader.py  index_manager.py  prompts.py  query_engine.py
