[tool.poetry]
name = "gradz-server"
version = "0.1.0"
description = "Backend server of gradz-ai written in python"
authors = ["Kushagra Gupta <kushgpt08@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn="0.22.0"
pymupdf="1.22.5"
openai="^1.34.0"
llama-index="^0.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


